--- a/Employee Analysis.ipynb
+++ b/Employee Analysis.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "\n",
     "# 1. Load Dataset\n",
-    "df = pd.read_csv(\"D:\\DEPI 2025-2026\\MLOps\\employees 2.csv\")\n",
+    "df = pd.read_csv(\"employees 2.csv\")\n",
     "\n",
     "# 2. Data Inspection\n",
     "display(df.head())\n",
